# crypto-charts

./: .env  .env.prod  README.md  alembic.ini  backfill_watchlist.py  pyproject.toml  restart.sh  test.db
alembic/: env.py
alembic/versions/: 066e1907d334_drop_ticker_column_from_watchlist.py  a565773baacd_create_watchlist.py  d6649b209e08_drop_ticker_column_from_watchlist.py  fa84b11335af_create_users_watchlist_crypto_prices.py
backend/: .env  .env.prod  auth_utils.py  config.py  crud.py  database.py  db.py  fetch_prices.py  main.py  models.py
backend/routers/: auth.py  coins.py  watchlist.py
crypto_dashboard/: main.py  services.py
frontend/: .gitignore  chart.html  index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: AuthModal.svelte  PriceChart.svelte  Watchlist.svelte  authFetch.ts  constants.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/static/: chart.html  chart.js  style.css
